force-app/main/default/objects/Krow__Project_Activity__c/Krow__Project_Activity__c.object-meta.xml
<CustomObject>
    <label>Project Timeline</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Timelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>