force-app/main/default/objects/Krow__Project_Activity__c/fields/Krow__Issue__c.field-meta.xml
<CustomField>
    <fullName>Krow__Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue</label>
    <referenceTo>Krow__Issue_Krow__c</referenceTo>
    <relationshipName>Project_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>