force-app/main/default/objects/Krow__Project_Activity__c/fields/Krow__New_Value__c.field-meta.xml
<CustomField>
    <fullName>Krow__New_Value__c</fullName>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>