force-app/main/default/objects/Krow__Project_Activity__c/fields/Krow__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>