force-app/main/default/objects/Krow__Project_Activity__c/fields/Krow__Project_Notes__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Notes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Notes</label>
    <referenceTo>Krow__Project_Notes__c</referenceTo>
    <relationshipName>Project_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>