force-app/main/default/objects/Krow__Project_Activity__c/fields/Krow__Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipName>Project_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>