force-app/main/default/objects/Krow__Project_Activity__c/fields/Krow__Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project Assignment Added</fullName>
            </value>
            <value>
                <fullName>Project Health Change</fullName>
            </value>
            <value>
                <fullName>Project Issue Added</fullName>
            </value>
            <value>
                <fullName>Project Note Added</fullName>
            </value>
            <value>
                <fullName>Project Risk Added</fullName>
            </value>
            <value>
                <fullName>Project Status Change</fullName>
            </value>
            <value>
                <fullName>Task Status Change</fullName>
            </value>
            <value>
                <fullName>Total Logged Hours Exceeds Estimated Hours for Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>